--- a/Homework 4/hw4.ipynb
+++ b/Homework 4/hw4.ipynb
@@ -2,17 +2,260 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get Ready\n",
+    "\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns; sns.set()\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import LeaveOneOut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATION</th>\n",
+       "      <th>STATION_NAME</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>PRCP</th>\n",
+       "      <th>SNWD</th>\n",
+       "      <th>SNOW</th>\n",
+       "      <th>TMAX</th>\n",
+       "      <th>TMIN</th>\n",
+       "      <th>AWND</th>\n",
+       "      <th>WDF2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WT17</th>\n",
+       "      <th>WT05</th>\n",
+       "      <th>WT02</th>\n",
+       "      <th>WT22</th>\n",
+       "      <th>WT04</th>\n",
+       "      <th>WT13</th>\n",
+       "      <th>WT16</th>\n",
+       "      <th>WT08</th>\n",
+       "      <th>WT18</th>\n",
+       "      <th>WT03</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GHCND:USW00024233</td>\n",
+       "      <td>SEATTLE TACOMA INTERNATIONAL AIRPORT WA US</td>\n",
+       "      <td>20120101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>50</td>\n",
+       "      <td>47</td>\n",
+       "      <td>100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GHCND:USW00024233</td>\n",
+       "      <td>SEATTLE TACOMA INTERNATIONAL AIRPORT WA US</td>\n",
+       "      <td>20120102</td>\n",
+       "      <td>109</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>106</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45</td>\n",
+       "      <td>180</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GHCND:USW00024233</td>\n",
+       "      <td>SEATTLE TACOMA INTERNATIONAL AIRPORT WA US</td>\n",
+       "      <td>20120103</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>117</td>\n",
+       "      <td>72</td>\n",
+       "      <td>23</td>\n",
+       "      <td>180</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GHCND:USW00024233</td>\n",
+       "      <td>SEATTLE TACOMA INTERNATIONAL AIRPORT WA US</td>\n",
+       "      <td>20120104</td>\n",
+       "      <td>203</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>56</td>\n",
+       "      <td>47</td>\n",
+       "      <td>180</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GHCND:USW00024233</td>\n",
+       "      <td>SEATTLE TACOMA INTERNATIONAL AIRPORT WA US</td>\n",
+       "      <td>20120105</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>28</td>\n",
+       "      <td>61</td>\n",
+       "      <td>200</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             STATION                                STATION_NAME      DATE  \\\n",
+       "0  GHCND:USW00024233  SEATTLE TACOMA INTERNATIONAL AIRPORT WA US  20120101   \n",
+       "1  GHCND:USW00024233  SEATTLE TACOMA INTERNATIONAL AIRPORT WA US  20120102   \n",
+       "2  GHCND:USW00024233  SEATTLE TACOMA INTERNATIONAL AIRPORT WA US  20120103   \n",
+       "3  GHCND:USW00024233  SEATTLE TACOMA INTERNATIONAL AIRPORT WA US  20120104   \n",
+       "4  GHCND:USW00024233  SEATTLE TACOMA INTERNATIONAL AIRPORT WA US  20120105   \n",
+       "\n",
+       "   PRCP  SNWD  SNOW  TMAX  TMIN  AWND  WDF2  ...  WT17  WT05  WT02  WT22  \\\n",
+       "0     0     0     0   128    50    47   100  ... -9999 -9999 -9999 -9999   \n",
+       "1   109     0     0   106    28    45   180  ... -9999 -9999 -9999 -9999   \n",
+       "2     8     0     0   117    72    23   180  ... -9999 -9999 -9999 -9999   \n",
+       "3   203     0     0   122    56    47   180  ... -9999 -9999 -9999 -9999   \n",
+       "4    13     0     0    89    28    61   200  ... -9999 -9999 -9999 -9999   \n",
+       "\n",
+       "   WT04  WT13  WT16  WT08  WT18  WT03  \n",
+       "0 -9999 -9999 -9999 -9999 -9999 -9999  \n",
+       "1 -9999     1     1 -9999 -9999 -9999  \n",
+       "2 -9999 -9999     1 -9999 -9999 -9999  \n",
+       "3 -9999     1     1 -9999 -9999 -9999  \n",
+       "4 -9999 -9999     1 -9999 -9999 -9999  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import data\n",
+    "\n",
+    "df = pd.read_csv('BicycleWeather.csv')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1600cf6534f4f09434e0657b0f607a05f9246ca876d150f6efd728dde598d688"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
