added cross val for ridge regression

--- a/Homework 4/hw4.ipynb
+++ b/Homework 4/hw4.ipynb
@@ -757,6 +757,33 @@
     "modelR = Ridge(alpha=4.63)\n",
     "modelR.fit(X, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7711"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(modelR, X, y, cv=10).mean().round(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross Validation Score for Ridge Regression is 0.7711"
+   ]
   }
  ],
  "metadata": {
