--- a/Homework 6/hw6.ipynb
+++ b/Homework 6/hw6.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,9 @@
     "# use seaborn plotting defaults\n",
     "import seaborn as sns; sns.set()\n",
     "from sklearn import datasets, svm, metrics\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# The digits dataset\n",
     "digits = datasets.load_digits()\n",
@@ -49,11 +52,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA 80%"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Labeling data\n",
+    "images_and_labels = list(zip(digits.images, digits.target))\n",
+    "n_samples = len(digits.images)\n",
+    "data = digits.images.reshape((n_samples, -1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original features: 64\n",
+      "Reduced features: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = StandardScaler().fit_transform(data)\n",
+    "\n",
+    "pca = PCA(n_components=.80, whiten=True)\n",
+    "\n",
+    "X_pca = pca.fit_transform(X)\n",
+    "print('Original features:', X.shape[1])\n",
+    "print('Reduced features:', X_pca.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVC Linear Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.97        88\n",
+      "           1       0.91      0.86      0.88        91\n",
+      "           2       0.98      0.95      0.96        86\n",
+      "           3       0.93      0.88      0.90        91\n",
+      "           4       0.99      0.96      0.97        92\n",
+      "           5       0.91      0.97      0.94        91\n",
+      "           6       0.98      0.97      0.97        91\n",
+      "           7       0.96      0.97      0.96        89\n",
+      "           8       0.92      0.90      0.91        88\n",
+      "           9       0.83      0.90      0.86        92\n",
+      "\n",
+      "    accuracy                           0.93       899\n",
+      "   macro avg       0.93      0.93      0.93       899\n",
+      "weighted avg       0.93      0.93      0.93       899\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001], 'kernel': ['linear']}\n",
+    "grid = RandomizedSearchCV(svm.SVC(), param_grid, refit=True, verbose=1)\n",
+    "grid.fit(X_pca[:n_samples//2], digits.target[:n_samples//2])\n",
+    "\n",
+    "expected = digits.target[n_samples//2:]\n",
+    "predicted = grid.predict(X_pca[n_samples//2:])\n",
+    "\n",
+    "print(metrics.classification_report(expected, predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVC Radial Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      0.99        88\n",
+      "           1       0.97      0.96      0.96        91\n",
+      "           2       0.75      0.99      0.85        86\n",
+      "           3       0.93      0.88      0.90        91\n",
+      "           4       0.99      0.86      0.92        92\n",
+      "           5       0.95      0.97      0.96        91\n",
+      "           6       0.99      0.88      0.93        91\n",
+      "           7       0.89      0.98      0.93        89\n",
+      "           8       0.93      0.89      0.91        88\n",
+      "           9       0.95      0.90      0.93        92\n",
+      "\n",
+      "    accuracy                           0.93       899\n",
+      "   macro avg       0.93      0.93      0.93       899\n",
+      "weighted avg       0.94      0.93      0.93       899\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001], 'kernel': ['rbf']}\n",
+    "grid = RandomizedSearchCV(svm.SVC(), param_grid, refit=True, verbose=1)\n",
+    "grid.fit(X_pca[:n_samples//2], digits.target[:n_samples//2])\n",
+    "\n",
+    "expected = digits.target[n_samples//2:]\n",
+    "predicted = grid.predict(X_pca[n_samples//2:])\n",
+    "\n",
+    "print(metrics.classification_report(expected, predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVC Polynomial Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.99      0.98        88\n",
+      "           1       0.97      0.93      0.95        91\n",
+      "           2       0.96      0.95      0.96        86\n",
+      "           3       0.95      0.89      0.92        91\n",
+      "           4       0.99      0.93      0.96        92\n",
+      "           5       0.93      0.97      0.95        91\n",
+      "           6       0.99      0.99      0.99        91\n",
+      "           7       0.95      0.94      0.95        89\n",
+      "           8       0.85      0.93      0.89        88\n",
+      "           9       0.90      0.91      0.91        92\n",
+      "\n",
+      "    accuracy                           0.94       899\n",
+      "   macro avg       0.95      0.94      0.94       899\n",
+      "weighted avg       0.95      0.94      0.94       899\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001], 'kernel': ['poly']}\n",
+    "grid = RandomizedSearchCV(svm.SVC(), param_grid, refit=True, verbose=1)\n",
+    "grid.fit(X_pca[:n_samples//2], digits.target[:n_samples//2])\n",
+    "\n",
+    "expected = digits.target[n_samples//2:]\n",
+    "predicted = grid.predict(X_pca[n_samples//2:])\n",
+    "\n",
+    "print(metrics.classification_report(expected, predicted))"
+   ]
   }
  ],
  "metadata": {
